learning-service-meshes/istio/trafficmanagement/7.Circuit-Breaking/3.Circuit-breakers-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: app-ds
  namespace: frontend
spec:
  host: app-svc
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 2
        connectTimeout: 30s
      http:
        http2MaxRequests: 2
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 5m
      baseEjectionTime: 10m
